--- a/app/src/app/landing/landing.component.html
+++ b/app/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div>
-    <p>Välj ett land:</p>
+    <p>Choose a country:</p>
     <mat-form-field appearance="fill">
         <mat-label>Land</mat-label>
         <mat-select [(ngModel)]="chosenCountryString" name="country">
@@ -10,6 +10,6 @@
     </mat-form-field>
 
     <div>
-        <button mat-raised-button color="primary" (click)="submitCountry()">Bekräfta val</button>
+        <button mat-raised-button color="primary" (click)="submitCountry()">Submit choice</button>
     </div>
 </div>
