--- a/app/src/app/overview/overview.component.html
+++ b/app/src/app/overview/overview.component.html
@@ -1,4 +1,4 @@
-<p>Förslag till {{countryDisplay}}</p>
+<p>Suggestions for {{countryDisplay}}</p>
 
 <DisplayDish [dish] = "chosenDish"> </DisplayDish>
 <DisplayDrinkComponent [drink] = "mainDrink"> </DisplayDrinkComponent>
