--- a/app/src/app/movies/display-movie-alternatives/display-movie-alternatives.component.html
+++ b/app/src/app/movies/display-movie-alternatives/display-movie-alternatives.component.html
@@ -3,6 +3,7 @@
         <li *ngFor="let item of alternatives" style="display: inline-block;">
             <div style="margin: 10px;">
                 <DisplaySelectedMovie [movie]="item"></DisplaySelectedMovie>
+                <button mat-stroked-button style="margin-top: 25px;" (click)='switchSelectedMovie(item.imdbID)'>Select this movie</button>
             </div>
 
         </li>
