--- a/app/src/app/movies/movies.component.html
+++ b/app/src/app/movies/movies.component.html
@@ -10,6 +10,6 @@
         <button mat-stroked-button (click)='randomiseAlternatives(3)'> Randomise new alternatives </button>
     </div>
     <div align="center">
-        <DisplayMovieAlternatives [alternatives]="chosenAlternatives"></DisplayMovieAlternatives>
+        <DisplayMovieAlternatives [alternatives]="chosenAlternatives" (newMovieEvent)=switchSelectedMovie($event)></DisplayMovieAlternatives>
     </div>
 </div>
