--- a/app/src/app/food/display-alternatives/display-alternatives.component.html
+++ b/app/src/app/food/display-alternatives/display-alternatives.component.html
@@ -1,5 +1,5 @@
 <div>
-    <mat-grid-list cols="3">
+    <mat-grid-list cols="3" style="min-height: min-content;">
         <mat-grid-tile *ngFor="let item of alternatives" style="display: inline-block;">
             <div class="alternative-div">
                 <DisplayDish [dish]="item"></DisplayDish>
