overview är horisontellt, men elementen ej på samma höjd

--- a/app/src/app/overview/overview.component.html
+++ b/app/src/app/overview/overview.component.html
@@ -1,5 +1,5 @@
 <p>Suggestions for {{countryDisplay}}</p>
 
-<DisplayDish [dish] = "chosenDish"> </DisplayDish>
-<DisplayDrinkComponent [drink] = "mainDrink"> </DisplayDrinkComponent>
-<DisplaySelectedMovie [movie] = "chosenMovie"> </DisplaySelectedMovie>
+<DisplayDish [dish] = "chosenDish" style="display: inline-block;"> </DisplayDish>
+<DisplayDrinkComponent [drink] = "mainDrink" style="display: inline-block;"> </DisplayDrinkComponent>
+<DisplaySelectedMovie [movie] = "chosenMovie" style="display: inline-block;"> </DisplaySelectedMovie>
