--- a/app/src/app/landing/landing.component.html
+++ b/app/src/app/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div>
+<div align="center">
     <p>Choose a country:</p>
     <mat-form-field appearance="fill">
         <mat-label>Land</mat-label>
