--- a/app/src/app/food/food.component.html
+++ b/app/src/app/food/food.component.html
@@ -3,7 +3,8 @@
         <DisplayDish [dish]="chosenDish"></DisplayDish>
     </div>
 
-    <div style="padding-top:20px">
+   <!--- <div style="padding-top:20px"> -->
+    <div class="alternative-div">
         <button mat-stroked-button (click)='randomizeDish()'> Randomise dish</button>
     </div>
 
