--- a/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.css
+++ b/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.css
@@ -1,3 +1,5 @@
+
+/*
 .example-card {
     max-width: 430px;
     min-width: 430px;
@@ -13,7 +15,7 @@
     box-sizing: border-box;
 
     padding: 20px
-    /*align-items: center;*/   
+    /*align-items: center; 
 }
 
 .image{
@@ -21,12 +23,7 @@
     object-fit: contain;
 }
 
-.image-pos{
-    /*justify-content: center;*/
-}
-
 .text-ing {
-    /*align-items: left;*/
     max-height: 140px;
     min-height: 140px;
     text-align: left;
@@ -37,3 +34,5 @@
     position: relative;
     left: 125px;
 }
+
+*/
