--- a/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
+++ b/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
@@ -1,14 +1,22 @@
-<mat-grid-list cols="3" rowHeight="3:4">
-    <ul>
-        <li *ngFor="let item of alternatives; let i = index">
-            <mat-grid-tile>
+<div>
+    <mat-grid-list cols="3" style="min-height: min-content;">
+        <mat-grid-tile *ngFor="let item of alternatives; " style="display: inline-block;">      
+            <div class="alternative-div">      
+                <DisplayDrinkComponent [drink]="item"></DisplayDrinkComponent>
+                <button mat-stroked-button  (click)='switchMainDrink(item.name)'>Switch to alternative</button>
+            </div>
+        </mat-grid-tile>
+    </mat-grid-list>
+</div>
 
-                <mat-card class="example-card">
 
-                    <!-- TITLE -->
+<!--
+style="margin-top: 25px;"
+
+<mat-card class="example-card">
+
                     <mat-card-title>{{item.name}}</mat-card-title>
 
-                    <!-- CONTENT -->
                         <mat-card-content class="text-ing">
                             <mat-grid-list cols="2" rowHeight="25px">
                                 <div *ngFor="let ing of item.ingredients; let i = index;">
@@ -18,32 +26,15 @@
                         </mat-card-content>
 
                     
-                    <!-- IMAGE -->
                     <div class="image-pos">
                         <img class="image" mat-card-image src={{item.img_url}}>
                     </div>
 
-                    <!-- BUTTON -->
                     <div class="button-pos">
                         <button mat-stroked-button (click)='switchMainDrink(item.name)'>Byt till alternativ</button>
                     </div>
 
                 </mat-card>
-            </mat-grid-tile>
-        </li>
-    </ul>
-</mat-grid-list>
 
 
-<!--
-<mat-grid-list cols="3" rowHeight="3:4">
-    <ul>
-        <li *ngFor="let item of alternatives; let i = index">
-            <mat-grid-tile>
-                <DisplayDrinkComponent [drink]="item"></DisplayDrinkComponent>
-                
-            </mat-grid-tile>
-        </li>
-    </ul>
-</mat-grid-list>
 -->
