--- a/app/src/app/drinks/display-drink/display-drink.component.css
+++ b/app/src/app/drinks/display-drink/display-drink.component.css
@@ -1,8 +1,10 @@
+
+/*
 .example-card {
     max-width: 400px;
     /*max-height: 500px;
     min-width: 100px;
-    min-height: 100px;*/
+    min-height: 100px;
     margin-bottom: 50px;
     margin-top: 50px;
     margin-left: 25px;
