--- a/app/src/app/drinks/display-drink/display-drink.component.html
+++ b/app/src/app/drinks/display-drink/display-drink.component.html
@@ -1,11 +1,13 @@
-<mat-card class="example-card">
+<mat-card class="display-card">
     <mat-card-title>{{drink.name}}</mat-card-title>
-    <mat-card-content>
+    <mat-card-content >
         <mat-grid-list cols="2" rowHeight="20px" >
             <div *ngFor="let ing of drink.ingredients; let i = index;">
-                <mat-grid-tile style="text-align:left">{{ drink.measurements[i] }} {{ ing }}</mat-grid-tile>
+                <mat-grid-tile style="text-align:left">
+                    {{ drink.measurements[i] }} {{ ing }}
+                </mat-grid-tile>      
             </div>
         </mat-grid-list>
     </mat-card-content>
-    <img class="image" mat-card-image src={{drink.img_url}}>
+    <img mat-card-image src={{drink.img_url}}>
 </mat-card>
