La till ul och li tag, tile ställde till det

--- a/app/src/app/drinks/display-drink/display-drink.component.html
+++ b/app/src/app/drinks/display-drink/display-drink.component.html
@@ -1,4 +1,4 @@
-<mat-card class="display-card">
+<mat-card style="padding:0px" class="display-card">
     <mat-card-title>{{drink.name}}</mat-card-title>
     <mat-card-content >
         <mat-grid-list cols="2" rowHeight="20px" >
