--- a/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
+++ b/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
@@ -1,18 +1,24 @@
 <div>
-    <mat-grid-list cols="3" style="min-height: min-content;">
-        <mat-grid-tile *ngFor="let item of alternatives; " style="display: inline-block;">      
-            <div class="alternative-div">      
+    <ul>
+        <li *ngFor="let item of alternatives; " style="display: inline-block; align-items: unset;">
+            <div class="alternative-div">   
                 <DisplayDrinkComponent [drink]="item"></DisplayDrinkComponent>
                 <button mat-stroked-button  (click)='switchMainDrink(item.name)'>Switch to alternative</button>
             </div>
-        </mat-grid-tile>
-    </mat-grid-list>
+        </li>
+    </ul>
+    
 </div>
+
 
 
 <!--
 style="margin-top: 25px;"
-
+<mat-grid-list cols="3">
+        <mat-grid-tile *ngFor="let item of alternatives; " style="display: inline-block; align-items: unset;">      
+            
+        </mat-grid-tile>
+    </mat-grid-list>
 <mat-card class="example-card">
 
                     <mat-card-title>{{item.name}}</mat-card-title>
