--- a/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
+++ b/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
@@ -1,6 +1,6 @@
 <div>
     <mat-grid-list cols="3" style="min-height: min-content;">
-        <mat-grid-tile *ngFor="let item of alternatives; " style="display: inline-block;">      
+        <mat-grid-tile class="ruta" *ngFor="let item of alternatives; " style="display: inline-block;">      
             <div class="alternative-div">      
                 <DisplayDrinkComponent [drink]="item"></DisplayDrinkComponent>
                 <button mat-stroked-button  (click)='switchMainDrink(item.name)'>Switch to alternative</button>
