Tried to make dish and drink css and html the same

--- a/app/src/app/food/display-dish/display-dish.component.html
+++ b/app/src/app/food/display-dish/display-dish.component.html
@@ -1,4 +1,4 @@
-<mat-card style="padding:0px" class="display-card">
+<mat-card class="display-card">
     <mat-card-title>{{dish.title}}</mat-card-title>
     <mat-card-content>
         <p>Rating: {{dish.spoonacularScore}}/100</p>
