--- a/app/src/app/food/display-alternatives/display-alternatives.component.html
+++ b/app/src/app/food/display-alternatives/display-alternatives.component.html
@@ -1,5 +1,18 @@
 <div>
-    <mat-grid-list cols="3" style="min-height: min-content;">
+    <ul>
+        <li *ngFor="let item of alternatives" style="display: inline-block;">
+            <div class="alternative-div">
+                <DisplayDish [dish]="item"></DisplayDish>
+                <button mat-stroked-button (click)='switchChosenDish(item.id)'>Switch to alternative</button>
+            </div>
+        </li>
+    </ul>
+    
+</div>
+
+
+<!-- 
+<mat-grid-list cols="3" style="min-height: min-content;">
         <mat-grid-tile *ngFor="let item of alternatives" style="display: inline-block;">
             <div class="alternative-div">
                 <DisplayDish [dish]="item"></DisplayDish>
@@ -7,4 +20,8 @@
             </div>
         </mat-grid-tile>
     </mat-grid-list>
-</div>
+
+
+
+
+-->
