--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -40,18 +40,18 @@ Styling för mat-cards
     min-height: 450px;
 */
 
-.display-card {
-
-    max-width: 400px;
-    max-height: 450px;
-    min-width: 400px;
-    min-height: 450px;
-    padding:0px;
+.display-card  {
+    max-width: 300px;
+    max-height: max-content;
+    min-width: 300px;
+    min-height: max-content;
+    padding: 0px;
     justify-content: center;
 
 }
 
 .display-card img {
+    display: flex;
     max-height: 350px;
     min-height: 350px;
     max-width:300;
@@ -67,13 +67,30 @@ Styling för mat-cards
     margin-bottom: 50px;
 }
 
+.mat-figure{
+    align-items: unset;
+    justify-content: center;
+}
+
 .div button {
     margin-top: 10px;
     margin-bottom: 20px;
 }
 
-.mat-grid-tile .mat-figure {
-    align-items: unset;    
+/*
+.alternative-div{
+    display: flex;
+    max-width: 400px;
+    max-height: 450px;
+    min-width: 400px;
+    min-height: 450px;
 }
+
+
+.mat-grid-tile .mat-figure {
+    display: flex;
+    align-items: unset;    
+}*/
+
 
 
