--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container>
-    <mat-toolbar color="primary">
+    <mat-toolbar color="secondary">
         <div *ngIf="atLanding(); else elseBlock">
 
             <ul>
