--- a/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
+++ b/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
@@ -1,5 +1,5 @@
 <div>
-    <mat-grid-list cols="3" >
+    <mat-grid-list cols="3" rowHeight="1:1.7">
         <mat-grid-tile *ngFor="let item of alternatives; " style="display: inline-block; align-items: unset;">      
             <div class="alternative-div">   
                 <DisplayDrinkComponent [drink]="item"></DisplayDrinkComponent>
