--- a/app/src/app/drinks/display-drink/display-drink.component.html
+++ b/app/src/app/drinks/display-drink/display-drink.component.html
@@ -1,9 +1,9 @@
 <mat-card class="display-card">
-    <mat-card-title>{{drink.name}}</mat-card-title>
-    <mat-card-content >
+    <mat-card-title  class="title-styling">{{drink.name}}</mat-card-title>
+    <mat-card-content class="list-of-ingredient">
         <mat-grid-list cols="2" rowHeight="20px" >
-            <div *ngFor="let ing of drink.ingredients; let i = index;">
-                <mat-grid-tile style="text-align:left">
+            <div class=”text-inside-grid” *ngFor="let ing of drink.ingredients; let i = index;">
+                <mat-grid-tile>
                     {{ drink.measurements[i] }} {{ ing }}
                 </mat-grid-tile>      
             </div>
