--- a/app/src/app/movies/display-movie-alternatives/display-movie-alternatives.component.html
+++ b/app/src/app/movies/display-movie-alternatives/display-movie-alternatives.component.html
@@ -1,11 +1,10 @@
 <div>
-    <ul>
-        <li *ngFor="let item of alternatives" style="display: inline-block;">
-            <div style="margin: 10px;">
+    <mat-grid-list cols="3" rowHeight="1:1.7">
+        <mat-grid-tile *ngFor="let item of alternatives; " style="display: inline-block; align-items: unset;">     
+            <div class="alternative-div">   
                 <DisplaySelectedMovie [movie]="item"></DisplaySelectedMovie>
-                <button mat-stroked-button style="margin-top: 25px;" (click)='switchSelectedMovie(item.imdbID)'>Select this movie</button>
+                <button mat-stroked-button (click)='switchSelectedMovie(item.imdbID)'>Select this movie</button>
             </div>
-
-        </li>
-    </ul>
+        </mat-grid-tile>
+    </mat-grid-list>
 </div>
