--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -41,13 +41,12 @@ Styling för mat-cards
 */
 
 .display-card  {
-    max-width: 300px;
+    max-width: 350px;
     max-height: max-content;
-    min-width: 300px;
+    min-width: 350px;
     min-height: max-content;
     justify-content: center;
     margin: 10px;
-
 }
 
 .display-card img {
@@ -55,9 +54,8 @@ Styling för mat-cards
     max-height: 350px;
     min-height: 350px;
     max-width:300;
+    min-width: 300;
     object-fit: contain;
-    /*align-items: center; */
-
 }
 
 .alternative-div button {
@@ -77,20 +75,26 @@ Styling för mat-cards
     margin-bottom: 20px;
 }
 
-/*
-.alternative-div{
+.list-of-ingredient{
+    max-height: 90px;
+    min-height: 90px;
     display: flex;
-    max-width: 400px;
-    max-height: 450px;
-    min-width: 400px;
-    min-height: 450px;
 }
 
+.title-styling{
+    max-height: 30px;
+    min-height: 30px;
+    padding-bottom: 7px;
+}
 
-.mat-grid-tile .mat-figure {
-    display: flex;
-    align-items: unset;    
-}*/
+.center-text{
+    align-content: center;
+}
+.text-inside-grid {
+    position: absolute;
+    left: 5px;
+  }
+
 
 
 
