lite försök till styling i drinks och movies

--- a/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
+++ b/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
@@ -1,8 +1,19 @@
-<div>
+<!--<div>
     <mat-grid-list cols="3" >
         <mat-grid-tile *ngFor="let item of alternatives; " style="display: inline-block; align-items: unset;">      
             <div class="alternative-div">   
                 <DisplayDrinkComponent [drink]="item"></DisplayDrinkComponent>
+                <button mat-stroked-button  (click)='switchMainDrink(item.name)'>Switch to alternative</button>
+            </div>
+        </mat-grid-tile>
+    </mat-grid-list>
+</div>
+-->
+<div align="center">
+    <mat-grid-list cols="3" rowHeight="1:1">
+        <mat-grid-tile *ngFor="let item of alternatives;">
+            <div class="placeholderino">
+                <DisplayDrinkComponent [drink]="item" ></DisplayDrinkComponent>
                 <button mat-stroked-button  (click)='switchMainDrink(item.name)'>Switch to alternative</button>
             </div>
         </mat-grid-tile>
