--- a/app/src/app/overview/overview.component.html
+++ b/app/src/app/overview/overview.component.html
@@ -1,5 +1,7 @@
 <p>Suggestions for {{countryDisplay}}</p>
+<div align="center">
+    <DisplayDish [dish] = "chosenDish" style="display: inline-block;"> </DisplayDish>
+    <DisplayDrinkComponent [drink] = "mainDrink" style="display: inline-block;"> </DisplayDrinkComponent>
+    <DisplaySelectedMovie [movie] = "chosenMovie" style="display: inline-block;"> </DisplaySelectedMovie>
+</div>
 
-<DisplayDish [dish] = "chosenDish" style="display: inline-block;"> </DisplayDish>
-<DisplayDrinkComponent [drink] = "mainDrink" style="display: inline-block;"> </DisplayDrinkComponent>
-<DisplaySelectedMovie [movie] = "chosenMovie" style="display: inline-block;"> </DisplaySelectedMovie>
