--- a/app/src/app/food/display-alternatives/display-alternatives.component.html
+++ b/app/src/app/food/display-alternatives/display-alternatives.component.html
@@ -3,7 +3,7 @@
         <mat-grid-tile *ngFor="let item of alternatives" style="display: inline-block;  align-items: unset;">
             <div class="alternative-div">
                 <DisplayDish [dish]="item"></DisplayDish>
-                <button mat-stroked-button (click)='switchChosenDish(item.id)'>Switch to alternative</button>
+                <button mat-stroked-button (click)='switchChosenDish(item.id)'>Select this recipe</button>
             </div>
         </mat-grid-tile>
     </mat-grid-list>
